# ObscureEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
examples/assets/models/building/: config.json
examples/assets/models/deer/: config.json
examples/assets/models/sphere/: config.json
examples/assets/shaders/default/: config.json  fragment.glsl  vertex.glsl
include/ObscureEngine/: Camera.h  EngineApp.h  FPSCounter.h  Model.h  Player.h  Screen.h  Voxel.h
include/ObscureEngine/GLTK/: Context.h  Core.h  GLObject.h  Renderer.hpp  Shader.h  UniformBuffer.h  drawable.h  glContext.h
include/ObscureEngine/Importer/: Importer.h  ModelImporter.h  ShaderImporter.h
include/ObscureEngine/Physics/: constants.h
include/ObscureEngine/WS/: Keyboard.hpp  Mouse.hpp  Window.h
src/: Camera.cpp  FPSCounter.cpp  Model.cpp  ModelImporter.cpp  Player.cpp  Screen.cpp  Shader.cpp  ShaderImporter.cpp  Voxel.cpp  Window.cpp  glContext.cpp
